--- a/apps/api-gateway/project.json
+++ b/apps/api-gateway/project.json
@@ -59,6 +59,12 @@
           "buildTarget": "api-gateway:build:production"
         }
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["apps/api-gateway/src/**/*.ts"]
+      }
     }
   },
   "tags": []
