--- a/yii-app/composer.json
+++ b/yii-app/composer.json
@@ -22,22 +22,8 @@
     "yiisoft/yii2-gii": "^2.2",
     "yiisoft/yii2-faker": "^2.0"
   },
-  "scripts": {
-    "post-install-cmd": [
-      "yii\composer\Installer::postInstall"
-    ],
-    "post-update-cmd": [
-      "yii\composer\Installer::postUpdate"
-    ]
-  },
+  "scripts": {},
   "extra": {
-    "yii\composer\Installer::postInstall": {
-      "setPermission": {
-        "runtime": "0777",
-        "web/assets": "0777",
-        "yii": "0755"
-      }
-    },
     "branch-alias": {
       "dev-master": "2.0.x-dev"
     }
