feat: add auth scaffold with role-based restrictions

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /vendor/
 yii-app/vendor/
 yii-app/runtime/
-yii-app/web/assets/
+yii-app/web/assets/*
+!yii-app/web/assets/.gitignore
 yii-app/data/*.db
 yii-app/.env
