--- a/yii-app/composer.json
+++ b/yii-app/composer.json
@@ -8,6 +8,11 @@
       "url": "https://asset-packagist.org"
     }
   ],
+  "config": {
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true
+    }
+  },
   "require": {
     "php": "^8.1",
     "yiisoft/yii2": "~2.0.49",
@@ -15,7 +20,8 @@
     "yiisoft/yii2-symfonymailer": "^2.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
     "bower-asset/bootstrap": "^5.2",
-    "bower-asset/font-awesome": "^5.15"
+    "bower-asset/font-awesome": "^5.15",
+    "twbs/bootstrap-icons": "^1.11"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.1",
