--- a/yii-app/composer.json
+++ b/yii-app/composer.json
@@ -24,6 +24,7 @@
     "twbs/bootstrap-icons": "^1.11"
   },
   "require-dev": {
+    "phpunit/phpunit": "^9.6",
     "yiisoft/yii2-debug": "^2.1",
     "yiisoft/yii2-gii": "^2.2",
     "yiisoft/yii2-faker": "^2.0"
