--- a/yii-app/composer.json
+++ b/yii-app/composer.json
@@ -16,6 +16,7 @@
   "require": {
     "php": "^8.1",
     "yiisoft/yii2": "~2.0.49",
+    "yiisoft/yii2-httpclient": "^2.0",
     "yiisoft/yii2-bootstrap5": "^2.0",
     "yiisoft/yii2-symfonymailer": "^2.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
